# serde-rs.github.io

./: .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  attr-bound.html  attr-default.html  attr-flatten.html  attr-rename.html  attr-skip-serializing.html  attributes.html  book.json  book.toml  borrow.html  codegen-hybrid.html  codegen-nightly.html  codegen-stable.html  codegen.html  container-attrs.html  conventions.html  convert-error.html  custom-date-format.html  custom-serialization.html  data-format.html  data-model.html  derive.html  deserialize-map.html  deserialize-struct.html  enum-number.html  enum-representations.html  enum-str.html  error-handling.html  examples.html  feature-flags.html  field-attrs.html  help.html  ignored-any.html  impl-deserialize.html  impl-deserializer.html  impl-serialize.html  impl-serializer.html  (+19 more)
_skeptic/: Cargo.toml  build.rs
_src/: Deserializing_any_type_from_deserializable_type.md  README.md  SUMMARY.md  attr-bound.md  attr-default.md  attr-flatten.md  attr-rename.md  attr-skip-serializing.md  attributes.md  borrow.md  container-attrs.md  conventions.md  convert-error.md  custom-date-format.md  custom-serialization.md  data-format.md  data-model.md  derive.md  deserialize-map.md  deserialize-struct.md  enum-number.md  enum-representations.md  error-handling.md  examples.md  feature-flags.md  field-attrs.md  help.md  ignored-any.md  impl-deserialize.md  impl-deserializer.md  impl-serialize.md  impl-serializer.md  json.md  lifetimes.md  no-std.md  remote-derive.md  stream-array.md  string-or-struct.md  transcode.md  unit-testing.md  (+2 more)
future/: attr-bound.html  attr-default.html  attr-rename.html  attr-skip-serializing.html  attributes.html  book.json  borrow.html  codegen.html  container-attrs.html  conventions.html  convert-error.html  custom-date-format.html  custom-serialization.html  data-format.html  data-model.html  derive.html  deserialize-map.html  deserialize-struct.html  enum-number.html  enum-representations.html  error-handling.html  examples.html  feature-flags.html  field-attrs.html  help.html  ignored-any.html  impl-deserialize.html  impl-deserializer.html  impl-serialize.html  impl-serializer.html  index.html  json.html  lifetimes.html  newtype-wrapper.html  remote-derive.html  search_index.json  serialize-map.html  stream-array.html  string-or-struct.html  transcode.html  (+2 more)
future/_skeptic/: Cargo.toml
skeptic/: Cargo.toml  build.rs
src/: README.md  SUMMARY.md  attr-bound.md  attr-default.md  attr-rename.md  attr-skip-serializing.md  attributes.md  codegen-hybrid.md  codegen-nightly.md  codegen-stable.md  codegen.md  custom-date-format.md  custom-serialization.md  deserialize-map.md  deserialize-struct.md  enum-number.md  enum-representations.md  enum-str.md  examples.md  impl-deserialize.md  impl-serialize.md  json.md  newtype-wrapper.md  release-notes.md  serialize-map.md  stream-array.md  string-or-struct.md  technical-details.md  trait-objects.md  transcode.md  troubleshooting.md  unit-testing.md
styles/: website.css
(+55 files in other folders)
