[package]
name = "gitbook"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"

[build-dependencies]
glob = "0.2"
skeptic = "0.9"

[dev-dependencies]
chrono = "0.3"
linked-hash-map = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_test = "1.0"
serde-transcode = "1.0"
serde_yaml = "0.7"
skeptic = "0.9"
void = "1.0"
