[package]
name = "serde-website"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"
publish = false

[build-dependencies]
glob = "0.2"
skeptic = "0.13"

[dev-dependencies]
chrono = "0.4"
linked-hash-map = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_test = "1.0"
serde-transcode = "1.0"
serde_yaml = "0.8"
skeptic = "0.13"
void = "1.0"
