[package]
name = "gitbook"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"

[build-dependencies]
skeptic = "0.8"

[dev-dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
skeptic = "0.8"

[replace]
'skeptic:0.8.1' = { git = "https://github.com/dtolnay/skeptic", branch = "omit" }
