[package]
name = "gitbook"
version = "0.1.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"

[build-dependencies]
glob = "0.2"
skeptic = "0.9"

[dev-dependencies]
chrono = "0.3"
linked-hash-map = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
serde_test = "0.9"
serde-transcode = "0.2"
serde_yaml = "0.6"
skeptic = "0.9"
void = "1.0"

[replace]
'serde:0.9.14' = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
'serde_derive:0.9.14' = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
'serde_json:0.9.10' = { git = "https://github.com/serde-rs/json", branch = "1.0" }
'serde_test:0.9.14' = { git = "https://github.com/serde-rs/serde", branch = "1.0" }
'serde-transcode:0.2.1' = { git = "https://github.com/dtolnay/serde-transcode", branch = "1.0" }
'serde_yaml:0.6.2' = { git = "https://github.com/dtolnay/serde-yaml", branch = "1.0" }
